--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ description: A blog about lorem ipsum dolor sit amet
 
 # User settings
 username: Alison Alexsy
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
-user_title: Mechanical & Aerospace Engineer
+user_description: Hi! My name is Alison Alexsy. I am originially from Grosse Pointe Woods, Michigan but currently reside in Madison, Wisconsin. I am a recent graduate from Michigan Tech University located in Houghton, Michigan, where I majored in Mechanical Engineering with a minor in Aerospace Engineering. I am currently looking for full-times job in the Madison area. This site showcases the projects I have worked
 email: amalexsy@mtu.edu
 twitter_username: lorem_ipsum
 github_username:  lorem_ipsum
