fixed user title that went missing

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: A blog about lorem ipsum dolor sit amet
 
 # User settings
 username: Alison Alexsy
+user_title: Mechanical & Aerospace Engineer
 user_description: Hi! My name is Alison Alexsy. I am originially from Grosse Pointe Woods, Michigan but currently reside in Madison, Wisconsin. I am a recent graduate from Michigan Tech University located in Houghton, Michigan, where I majored in Mechanical Engineering with a minor in Aerospace Engineering. I am currently looking for full-times job in the Madison area. This site showcases the projects I have worked
 email: amalexsy@mtu.edu
 twitter_username: lorem_ipsum
