--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: Alison Alexsy's website, recent Mechanical & Aerospace Engineering 
 # User settings
 username: Alison Alexsy
 user_title: Mechanical & Aerospace Engineer
-user_description: Hi! My name is Alison Alexsy. I am originially from Grosse Pointe Woods, Michigan but currently reside in Madison, Wisconsin. I am a recent graduate from Michigan Tech University located in Houghton, Michigan, where I majored in Mechanical Engineering with a minor in Aerospace Engineering. I am currently looking for full-times job in the Madison area. This site showcases the projects I have worked
+user_description: Hi! My name is Alison Alexsy. I am originially from the Metro Detroit Area and currently reside in Madison, Wisconsin. I am a recent graduate from Michigan Tech University located in the snowy and beautiful Houghton, Michigan. I majored in Mechanical Engineering with a minor in Aerospace Engineering. I am currently looking for entry-level engineering positions in the Madison area. This site showcases my area of expertises and the many projects I have worked on so far in my engineering career. You can check out my resume <a href="/resume">here!</a>.
 email: amalexsy@mtu.edu
 twitter_username: lorem_ipsum
 github_username:  lorem_ipsum
