--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Alison Alexsy
 description: Alison Alexsy's website, recent Mechanical & Aerospace Engineering graduate
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
-url: https://amalexsy.com
+url: https://alisonalexsy.com
 # User settings
 username: Alison Alexsy
 user_title: Mechanical & Aerospace Engineer
