--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://alisonalexsy.com
 # User settings
 username: Alison Alexsy
 user_title: Mechanical & Aerospace Engineer
-user_description: Hi! My name is Alison Alexsy. I am from the Metro Detroit Area and currently reside in Madison, Wisconsin. I am a recent graduate from Michigan Tech University located in the snowy and beautiful Houghton, Michigan. I earned my BS degree in Mechanical Engineering with a minor in Aerospace Engineering. I am currently looking for entry-level engineering positions in the Madison area. This site showcases my proficencies and the many projects I have worked on so far in my engineering career. Below you can preview my selected technical and computer software skills in addition to some recent projects I have worked on. To view a full list of my skills you can check out my resume <a href="/resume">here!</a>.
+user_description: Hi! My name is Alison Alexsy. I am from the Metro Detroit Area and currently reside in Madison, Wisconsin. I am a recent graduate from Michigan Tech University located in the snowy and beautiful Houghton, Michigan. I earned my BS degree in Mechanical Engineering with a minor in Aerospace Engineering. I am employed as an Applications Engineer for a web guiding and visual inspection company in the printing industry. This site showcases my proficencies and the many projects I have worked on so far in my engineering career. Below you can preview my selected technical and computer software skills in addition to some recent projects I have worked on. To view a full list of my skills you can check out my resume <a href="/resume">here!</a>.
 email: amalexsy@mtu.edu
 twitter_username: lorem_ipsum
 github_username:  lorem_ipsum
